<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_station_name"
        android:key="station_name">

        <EditTextPreference
            android:capitalize="none"
            android:defaultValue="@string/pref_default_url"
            android:inputType="text"
            android:key="station_feed_url"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_station_url" />

        <Preference
            android:title="@string/pref_wind_speed_min"
            android:key="minimum_wind_speed"
            android:defaultValue="@integer/wind_speed_min_default" />

        <Preference
            android:title="@string/pref_wind_speed_max"
            android:key="maximum_wind_speed"
            android:defaultValue="@integer/wind_speed_max_default" />
    </PreferenceCategory>

</PreferenceScreen>
